# browser-sandbox

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: browser.rs  icon.rs  lib.rs  main.rs  models.rs  storage.rs
src-tauri/src/commands/: config.rs  group.rs  mod.rs  profile.rs
src/components/: GroupModal.tsx  ProfileCard.tsx  ProfileGrid.tsx  ProfileModal.tsx  ProxyModal.tsx  SettingsPage.tsx  Sidebar.tsx
src/hooks/: useProfileIcons.ts
src/i18n/: index.ts  useI18n.ts
src/types/: index.ts
