[package]
name = "browser-sandbox"
version = "0.1.0"
description = "Browser Sandbox Manager - Manage multiple Chrome/Edge profiles"
authors = ["you"]
edition = "2021"

[lib]
name = "browser_sandbox_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
